Prevent horizontal scrolling

--- a/src/assets/styles/04_elements/_labels-list.scss
+++ b/src/assets/styles/04_elements/_labels-list.scss
@@ -30,6 +30,7 @@
 
   @media (min-width: 720px) {
     left: 110px;
+    width: max-content;
 
     li {
       background-color: $color-offblack;
